# Risk

./: .gitignore  CMakeLists.txt  COMP345proj.sln  README.md
COMP345proj/: COMP345proj.vcxproj  COMP345proj.vcxproj.filters  Card.h  Continent.cpp  Deck.cpp  Deck.h  Hand.cpp  Hand.h  Main.cpp  Map.cpp  MapLoader.cpp  MapLoader.h  Territory.cpp  stdafx.cpp
COMP345proj/Debug/: vc141.idb
COMP345proj/Debug/COMP345proj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  COMP345proj.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
COMP345proj/include/: Continent.h  Territory.h
Debug/: COMP345proj.ilk
Dice/: CMakeLists.txt  Dice  Dice.cbp  main.cpp
include/: AggressivePlayer.h  BenevolentPlayer.h  Card.h  Continent.h  Deck.h  Dice.h  Hand.h  MainGame.h  Map.h  MapLoader.h  Player.h  PlayerStrategy.h  Strategy.h  Territory.h  Tournament.h  targetver.h  tournament.h
include/Pattern/: GameStats.h  Observer.h  PlayerView.h  Subject.h
include/game/: Attack.h  Fortify.h  Phase.h  Reinforce.h
include/strategy/: AggressivePlayer.h  BenevolentPlayer.h  CheaterPlayer.h  HumanPlayer.h  RandomPlayer.h  Strategy.h
maps/: listOfMaps.txt  mini.map
src/: AggressivePlayer.cpp  BenevolentPlayer.cpp  CMakeLists.txt  Card.cpp  Continent.cpp  Deck.cpp  Dice.cpp  Hand.cpp  HumanPlayer.cpp  HumanPlayer.h  Main.cpp  MainGame.cpp  Map.cpp  MapCreatorTester.cpp  MapLoader.cpp  Player.cpp  PlayerStrategy.cpp  Territory.cpp  Tournament.cpp  stdafx.cpp  tournament.cpp
src/driver/: Main2.cpp
src/game/: Attack.cpp  Fortify.cpp  Phase.cpp  Reinforce.cpp
src/pattern/: GameStats.cpp  Observer.cpp  PlayerView.cpp  Subject.cpp
src/strategy/: AggressivePlayer.cpp  BenevolentPlayer.cpp  CheaterPlayer.cpp  HumanPlayer.cpp  RandomPlayer.cpp  Strategy.cpp
